# stable-diffusion-prompt-reader

./: .gitignore  LICENSE  README.md  README.zh-Hans.md  __error__.sh  file_version_info.txt  hook-tkinterdnd2.py  mac.spec  main.py  main.spec  pyproject.toml  requirements.txt  setup.py  win.spec
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  FORMAT-SUPPORT.yml
resources/: gray.json  icon.icns
sd_prompt_reader/: __init__.py  __version__.py  app.py  button.py  cli.py  constants.py  ctk_tooltip.py  ctkdnd.py  image_data_reader.py  image_viewer.py  logger.py  main.py  parameter_viewer.py  prompt_viewer.py  status_bar.py  textbox.py  update_checker.py  utility.py
sd_prompt_reader/format/: __init__.py  a1111.py  base_format.py  comfyui.py  drawthings.py  easydiffusion.py  fooocus.py  invokeai.py  novelai.py  swarmui.py
sd_prompt_reader/resources/: __init__.py  gray.json  icon.icns
symbols/: expand.sh  generateIcons.sh
whl/: build_pyinstaller.bat  charset_normalizer-3.1.0-cp311-cp311-macosx_10_9_universal2.whl  charset_normalizer-3.2.0-cp311-cp311-macosx_10_9_universal2.whl  charset_normalizer-3.3.0-cp311-cp311-macosx_10_9_universal2.whl  charset_normalizer-3.3.1-cp311-cp311-macosx_10_9_universal2.whl  charset_normalizer-3.3.2-cp311-cp311-macosx_10_9_universal2.whl  fuse_pillow.sh  pyinstaller-5.10.1-py3-none-win_amd64.whl  pyinstaller-5.9.0-py3-none-win_amd64.whl
