[tool.poetry]
name = "sd-prompt-reader"
version = "1.3.2.post2"
description = "A simple standalone viewer for reading prompt from Stable Diffusion generated image outside the webui."
authors = ["receyuki <receyuki@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/receyuki/stable-diffusion-prompt-reader"
repository = "https://github.com/receyuki/stable-diffusion-prompt-reader"
documentation = "https://github.com/receyuki/stable-diffusion-prompt-reader"
packages = [{include = "sd_prompt_reader"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/receyuki/stable-diffusion-prompt-reader/issues"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5"
tkinterdnd2-universal = "^1.7.3"
pyperclip = "^1.8.2"
customtkinter = "^5.2.0"
pyobjus = { version = "^1.2.1", markers = "sys_platform == 'darwin'" }
pyobjc-framework-Cocoa = { version = "^9.1.1", markers = "sys_platform == 'darwin'" }
piexif = "^1.1.3"
packaging = "23.1"
pefile = "^2023.2.7"
requests = "^2.31.0"

[tool.poetry.scripts]
sd-prompt-reader = "sd_prompt_reader.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
