[tool.poetry]
name = "sd-prompt-reader"
version = "1.3.4.post1"
description = "A simple standalone viewer for reading prompt from Stable Diffusion generated image outside the webui."
authors = ["receyuki <receyuki@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/receyuki/stable-diffusion-prompt-reader"
repository = "https://github.com/receyuki/stable-diffusion-prompt-reader"
documentation = "https://github.com/receyuki/stable-diffusion-prompt-reader"
packages = [{include = "sd_prompt_reader"}]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/receyuki/stable-diffusion-prompt-reader/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
sd-prompt-reader = "sd_prompt_reader.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
