[tool.poetry]
name = "sd-prompt-reader"
version = "1.3.5b1"
description = "A simple standalone viewer for reading prompt from Stable Diffusion generated image outside the webui."
authors = ["receyuki <receyuki@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/receyuki/stable-diffusion-prompt-reader"
repository = "https://github.com/receyuki/stable-diffusion-prompt-reader"
documentation = "https://github.com/receyuki/stable-diffusion-prompt-reader"
packages = [{include = "sd_prompt_reader"}]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/receyuki/stable-diffusion-prompt-reader/issues"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "10.3.0"
tkinterdnd2-universal = ">=1.7.3,<1.8.0"
pyperclip = ">=1.8.2,<1.9.0"
customtkinter = ">=5.2.2,<5.3.0"
pyobjus = {version = ">=1.2.3,<1.3.0", platform = "darwin"}
pyobjc-framework-cocoa = {version = "10.2", platform = "darwin"}
piexif = ">=1.1.3,<1.2.0"
pefile = ">=2023.2.7,<2023.3.0"
requests = ">=2.31.0,<2.32.0"
toml = ">=0.10.2,<0.11.0"
ctktooltip = ">=0.8,<1.0"
click = ">=8.1.7,<8.2.0"

[tool.poetry.scripts]
sd-prompt-reader = "sd_prompt_reader.app:main"
sd-prompt-reader-cli = "sd_prompt_reader.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
